--- a/Klike/Sources/Controllers/KLEventGalleryCell.xib
+++ b/Klike/Sources/Controllers/KLEventGalleryCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLEventGalleryCell" rowHeight="69" id="e1a-EF-CfJ" customClass="KLEventGalleryCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="KLEventGalleryCell" rowHeight="69" id="e1a-EF-CfJ" customClass="KLEventGalleryCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e1a-EF-CfJ" id="Adk-5S-lhU">
@@ -40,6 +40,7 @@
                             <constraint firstAttribute="height" constant="88" id="RNv-TI-Lvd"/>
                             <constraint firstItem="QCX-LY-88o" firstAttribute="leading" secondItem="jM8-vB-YIc" secondAttribute="leading" id="XkL-5j-x8K"/>
                             <constraint firstAttribute="trailing" secondItem="QCX-LY-88o" secondAttribute="trailing" id="pZ8-By-9QI"/>
+                            <constraint firstAttribute="bottom" secondItem="QCX-LY-88o" secondAttribute="bottom" constant="7" id="w4E-b7-jZu"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -53,6 +54,7 @@
                     <constraint firstAttribute="bottom" secondItem="jM8-vB-YIc" secondAttribute="bottom" constant="3" id="08v-ZQ-JjK"/>
                     <constraint firstItem="jM8-vB-YIc" firstAttribute="top" secondItem="Adk-5S-lhU" secondAttribute="top" id="GHm-aO-IFz"/>
                     <constraint firstItem="jM8-vB-YIc" firstAttribute="leading" secondItem="Adk-5S-lhU" secondAttribute="leading" id="XOd-QJ-Caf"/>
+                    <constraint firstAttribute="bottom" secondItem="jM8-vB-YIc" secondAttribute="bottom" constant="3" id="uPb-1M-Y0R"/>
                     <constraint firstAttribute="trailing" secondItem="jM8-vB-YIc" secondAttribute="trailing" id="yqm-Z0-HhW"/>
                 </constraints>
                 <variation key="default">
