--- a/Klike/Interfaces/ExploreEventCell.xib
+++ b/Klike/Interfaces/ExploreEventCell.xib
@@ -62,30 +62,15 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beach Party" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2tH-OH-tc2">
                         <rect key="frame" x="15" y="244" width="288" height="24"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dec 23, 5 miles — North Beach" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceK-f4-glB">
                         <rect key="frame" x="15" y="276" width="288" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zrv-qF-93a">
-                        <rect key="frame" x="15" y="328" width="289" height="24"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="24" id="12m-GS-0g9"/>
-                            <constraint firstAttribute="width" constant="289" id="SUZ-Zf-iuN"/>
-                        </constraints>
-                        <state key="normal">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="SUZ-Zf-iuN"/>
-                            </mask>
-                        </variation>
-                    </button>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2gt-pI-AZi" userLabel="attendies">
                         <rect key="frame" x="15" y="328" width="225" height="24"/>
                         <subviews>
@@ -182,6 +167,24 @@
                         <color key="textColor" red="0.41176470590000003" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zrv-qF-93a">
+                        <rect key="frame" x="15" y="328" width="289" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="12m-GS-0g9"/>
+                            <constraint firstAttribute="width" constant="289" id="SUZ-Zf-iuN"/>
+                        </constraints>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="SUZ-Zf-iuN"/>
+                            </mask>
+                        </variation>
+                        <connections>
+                            <action selector="onAttendies:" destination="eX6-4e-HNJ" eventType="touchUpInside" id="Sgw-k4-Dnj"/>
+                        </connections>
+                    </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="03s-Ja-1jV">
                         <rect key="frame" x="0.0" y="368" width="320" height="8"/>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
