--- a/Klike/Interfaces/Main.storyboard
+++ b/Klike/Interfaces/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xyk-5J-ogf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xyk-5J-ogf">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
@@ -90,10 +90,10 @@
             </objects>
             <point key="canvasLocation" x="1662" y="-229.5"/>
         </scene>
-        <!--Event View Controller-->
+        <!--Vew Controller-->
         <scene sceneID="WUl-9V-X9j">
             <objects>
-                <viewController id="pRZ-09-we6" customClass="KLEventViewController" sceneMemberID="viewController">
+                <viewController id="pRZ-09-we6" customClass="UIVewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tQ5-1q-cpu"/>
                         <viewControllerLayoutGuide type="bottom" id="RRv-Ou-doa"/>
