finished map screen

--- a/Klike/Sources/Controllers/Map/KLMapViewController.xib
+++ b/Klike/Sources/Controllers/Map/KLMapViewController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLMapViewController">
             <connections>
+                <outlet property="_map" destination="FQZ-aR-UYE" id="OMp-qH-CMD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +14,22 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="FQZ-aR-UYE">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="DUH-ah-JLD"/>
+                    </connections>
+                </mapView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="FQZ-aR-UYE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="5JT-BL-0Cw"/>
+                <constraint firstAttribute="trailing" secondItem="FQZ-aR-UYE" secondAttribute="trailing" id="SGa-Oo-WzG"/>
+                <constraint firstItem="FQZ-aR-UYE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="VXl-pj-rvD"/>
+                <constraint firstAttribute="bottom" secondItem="FQZ-aR-UYE" secondAttribute="bottom" id="zv5-Wi-Oud"/>
+            </constraints>
+            <point key="canvasLocation" x="-184" y="385"/>
         </view>
     </objects>
 </document>
